Fix footer overlapping with gameboards

--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,7 @@ body {
 h1 {
   text-align: center;
   font-size: 4em;
-  margin-bottom: 5%;
+  margin-bottom: 3%;
   font-family: "IM Fell English", Verdana, Geneva, Tahoma, sans-serif;
 }
 
@@ -303,7 +303,7 @@ body {
 
 /* Button author - Cole McCombs https://codepen.io/mccombsc */
 .test1 > button {
-  margin-top: 5%;
+  margin-top: 10%;
   min-width: 300px;
   min-height: 60px;
   font-family: "IM Fell English", Verdana, Geneva, Tahoma, sans-serif;
@@ -440,6 +440,7 @@ footer {
   display: flex;
   justify-content: center;
   align-items: flex-end;
+  margin-top: 3vh;
   margin-left: auto;
   margin-right: auto;
   gap: 1vh;
